--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meal Prep App</title>
     <link rel="stylesheet" type="text/css" href="/assets/index.css" />
-    <script src="/assets/jquery_3.6.4.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 </head>
 <body>
 
     <h1>Meal Prep App</h1>
-    <p id="paragraph" style="font-family=Rubik;">
+    <p id="paragraph">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis sequi expedita eligendi est enim. Temporibus culpa maxime labore reprehenderit tempore suscipit quae eligendi, perferendis amet repellat soluta animi enim sit.
         Fuga, non delectus. Aspernatur quibusdam atque nisi maiores. Voluptates quod porro ducimus dolorum repellat dolores sunt voluptatem maiores at blanditiis aperiam, ullam autem! Tempore qui eveniet, veritatis fugit odio atque?
         Praesentium delectus animi sapiente iste, dolores, ullam quae hic sed placeat nam sunt nobis! Autem temporibus natus eaque commodi magnam iure nisi ullam ipsam nobis non. Eos natus modi laborum.
     </p>
+    <img src="https://lh3.googleusercontent.com/ogw/AOLn63FY_hUcsBFXARZ7OGO6LPPiZP756hiwQwn0UH4m=s64-c-mo">
     <button onclick="changeParagraphColour();">
         Change Paragraph Colour
     </button>
