--- a/app/src/main/assets/calculator.html
+++ b/app/src/main/assets/calculator.html
@@ -5,11 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meal Prep App</title>
     <link rel="stylesheet" type="text/css" href="/assets/calculator.css" />
+    <link rel="stylesheet" type="text/css" href="/assets/common.css" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 </head>
 <body>
 
     <main>
+
+        <h1>Calculator</h1>
 
     </main>
 
