--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -5,17 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meal Prep App</title>
     <link rel="stylesheet" type="text/css" href="/assets/index.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/assets/common.css" />
 </head>
 <body>
 
     <main>
 
-        <div class="meal-plans" id="meal-plans">
-
-        </div>
-
-        <div class="create-plan">
+        <div class="create-plan" onclick="appToast('Feature Not Yet Implemented!');">
 
             <h3>Create A New Meal Plan +</h3>
 
@@ -62,4 +58,6 @@
     </nav>
 
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+<script src="/assets/index.js"></script>
 </html>
