--- a/app/src/main/assets/calendar.html
+++ b/app/src/main/assets/calendar.html
@@ -6,7 +6,6 @@
     <title>Meal Prep App</title>
     <link rel="stylesheet" type="text/css" href="/assets/calendar.css" />
     <link rel="stylesheet" type="text/css" href="/assets/common.css" />
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 </head>
 <body>
 
@@ -55,4 +54,6 @@
     </nav>
 
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+<script src="calendar.js"></script>
 </html>
