--- a/app/src/main/assets/calculator.html
+++ b/app/src/main/assets/calculator.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Meal Prep App</title>
     <link rel="stylesheet" type="text/css" href="/assets/calculator.css" />
     <link rel="stylesheet" type="text/css" href="/assets/common.css" />
@@ -12,6 +12,40 @@
     <main>
 
         <h1>Calculator</h1>
+
+        <br>
+
+        <label for="age">Age (years)</label>
+        <input type="number" id="age" name="age" placeholder="0">
+
+        <br>
+
+        <label for="height">Height (cm)</label>
+        <input type="number" id="height" name="height" placeholder="0">
+
+        <br>
+
+        <label for="weight">Weight (lbs)</label>
+        <input type="number" id="weight" name="weight" placeholder="0">
+        
+        <br>
+
+        <label for="pal">How many days you workout a week</label>
+        <input type="number" id="pal" name="pal" placeholder="">
+
+        <br>
+
+        <label for="is_male">Are you male</label>
+        <input type="radio">
+
+
+        <br>
+
+        <button id="calculate" onclick="getBMR();">Calculate</button>
+
+        <hr>
+
+        <h2 id="result"></h2>
 
     </main>
 
