--- a/app/src/main/assets/calculator.html
+++ b/app/src/main/assets/calculator.html
@@ -30,8 +30,12 @@
         
         <br>
 
-        <label for="pal">How many days you workout a week</label>
+        <label for="pal">How hard will you be workin out today (1-10 based on scale below)</label>
         <input type="number" id="pal" name="pal" placeholder="">
+
+        <br>
+
+        <img src="https://cdn.shopify.com/s/files/1/0064/6984/5057/files/RPE-scale_large.png?v=1565708896">
 
         <br>
 
@@ -45,7 +49,11 @@
 
         <hr>
 
-        <h2 id="result"></h2>
+        <h2 id="resultBMR"></h2>
+
+        <br>
+        d
+        <h2 id="resultTEE"></h2>
 
     </main>
 
