implented calculate BMI function in JS

--- a/app/src/main/assets/calculator.html
+++ b/app/src/main/assets/calculator.html
@@ -52,8 +52,10 @@
         <h2 id="resultBMR"></h2>
 
         <br>
-        d
+
         <h2 id="resultTEE"></h2>
+        
+        <h2 id="resultBMI"></h2>
 
     </main>
 
