--- a/app/src/main/assets/settings.html
+++ b/app/src/main/assets/settings.html
@@ -15,34 +15,34 @@
 
         <div class="divider"></div>
 
-        <h3>Age (years): </h3>
-        
-        <input type="number" id="age-input">
+        <div class="inputs">
 
-        <div class="divider"></div>
+            <h3 id="age-label">Age (years): </h3>
+            
+            <input type="number" id="age-input">
 
-        <h3>Height (cm): </h3>
+            <h3 id="height-label">Height (cm): </h3>
 
-        <input type="number" id="height-input">
+            <input type="number" id="height-input">
 
-        <div class="divider"></div>
+            <h3 id="weight-label">Weight (kg): </h3>
 
-        <h3>Weight (kg): </h3>
+            <input type="number" id="weight-input">
 
-        <input type="number" id="weight-input">
+            <h3 id="gender-label">Gender: </h3>
 
-        <div class="divider"></div>
+            <div class="toggle">
 
-        <h3>Gender: </h3>
+                <label class="switch">
+                    <input type="checkbox" id="gender-input" checked>
+                    <span class="slider round"></span>
+                </label>
 
-        <div class="toggle">
-
-            <label class="switch">
-                <input type="checkbox" id="gender-input" checked>
-                <span class="slider round"></span>
-            </label>
+            </div>
 
         </div>
+
+        <div class="divider"></div>
 
         <button id="save-settings" onclick="saveSettings();">Save</button>
 
