--- a/app/src/main/assets/calculator.html
+++ b/app/src/main/assets/calculator.html
@@ -11,50 +11,53 @@
 
     <main>
 
-        <h1>Calculator</h1>
+        <section class="bmr">
 
-        <br>
+            <h1>Basal Metabolic Rate</h1>
 
-        <label for="age">Age (years)</label>
-        <input type="number" id="age" name="age" placeholder="0">
+            <ul class="bmr">
 
-        <br>
+                <li id="bmr-1"></li>
 
-        <label for="height">Height (cm)</label>
-        <input type="number" id="height" name="height" placeholder="0">
+                <li id="bmr-2"></li>
 
-        <br>
+                <li id="bmr-3"></li>
 
-        <label for="weight">Weight (lbs)</label>
-        <input type="number" id="weight" name="weight" placeholder="0">
-        
-        <br>
+                <li id="bmr-4"></li>
 
-        <label for="pal">How hard will you be workin out today (1-10 based on scale below)</label>
-        <input type="number" id="pal" name="pal" placeholder="">
+                <li id="bmr-5"></li>
 
-        <br>
+            </ul>
 
-        <img src="https://cdn.shopify.com/s/files/1/0064/6984/5057/files/RPE-scale_large.png?v=1565708896">
+        </section>
 
-        <br>
+        <section class="bmi">
 
-        <label for="is_male">Are you male</label>
-        <input type="radio">
+            <h1 id="bmi-val">Body Mass Index</h1>
 
+            <img src="https://www.medindia.net/patients/calculators/images/body-mass-index-bmi-chart.jpg" alt="Body Mass Index Meaning Chart">
 
-        <br>
+        </section>
 
-        <button id="calculate" onclick="getBMR();">Calculate</button>
+        <section class="blp">
 
-        <hr>
+            <h1 id="blp-val"></h1>
 
-        <h2 id="resultBMR"></h2>
+        </section>
 
-        <br>
-        <h2 id="resultTEE"></h2>
-        
-        <h2 id="resultBMI"></h2>
+        <section class="bfp">
+
+            <h1 id="bfp-val"></h1>
+
+            <img src="https://www.dancehealthfitness.com/uploads/2/4/9/0/24902440/5472960_orig.gif" alt="Body Fat Percentage Meaning Chart">
+
+        </section>
+
+        <section class="mp">
+
+            <h1 id="mp-val"></h1>
+
+        </section>
 
     </main>
 
