--- a/app/src/main/assets/settings.html
+++ b/app/src/main/assets/settings.html
@@ -11,40 +11,44 @@
 
     <main>
 
-        <h1>Settings</h1>
+        <form>
 
-        <div class="divider"></div>
+            <h1>Settings</h1>
 
-        <div class="inputs">
+            <div class="divider"></div>
 
-            <h3 id="age-label">Age (years): </h3>
-            
-            <input type="number" id="age-input">
+            <div class="inputs">
 
-            <h3 id="height-label">Height (cm): </h3>
+                <h3 id="age-label">Age (years): </h3>
+                
+                <input type="number" id="age-input">
 
-            <input type="number" id="height-input">
+                <h3 id="height-label">Height (cm): </h3>
 
-            <h3 id="weight-label">Weight (kg): </h3>
+                <input type="number" id="height-input">
 
-            <input type="number" id="weight-input">
+                <h3 id="weight-label">Weight (kg): </h3>
 
-            <h3 id="gender-label">Gender: </h3>
+                <input type="number" id="weight-input">
 
-            <div class="toggle">
+                <h3 id="gender-label">Gender: </h3>
 
-                <label class="switch">
-                    <input type="checkbox" id="gender-input" checked>
-                    <span class="slider round"></span>
-                </label>
+                <div class="toggle">
+
+                    <label class="switch">
+                        <input type="checkbox" id="gender-input" checked>
+                        <span class="slider round"></span>
+                    </label>
+
+                </div>
 
             </div>
 
-        </div>
+            <div class="divider"></div>
 
-        <div class="divider"></div>
+            <button id="save-settings" onclick="saveSettings();" type="submit">Save</button>
 
-        <button id="save-settings" onclick="saveSettings();">Save</button>
+        </form>
 
     </main>
 
