Added the "Create Meal Plan" modal + styled it + changed many styles to make it a lot more accessible.
NOTE: I did NOT implement the creating a meal functions, purly the
layout, and style.

--- a/app/src/main/assets/index.html
+++ b/app/src/main/assets/index.html
@@ -11,7 +11,7 @@
 
     <main>
 
-        <div class="create-plan" onclick="appToast('Feature Not Yet Implemented!');">
+        <div class="create-plan" onclick="showCreateMealPlan();">
 
             <h3>Create A New Meal Plan +</h3>
 
