--- a/app/src/main/assets/calculator.html
+++ b/app/src/main/assets/calculator.html
@@ -6,6 +6,14 @@
     <title>Meal Prep App</title>
     <link rel="stylesheet" type="text/css" href="/assets/calculator.css" />
     <link rel="stylesheet" type="text/css" href="/assets/common.css" />
+    <script>
+        settings = JSON.parse(app.getLocalFile('settings.json'));
+
+        if (settings.age <= 0 || settings.height <= 0 || settings.weight <= 0) {
+            app.showToast('Please fill in your settings before using the calculator.')
+            window.location.href = '/assets/settings.html';
+        }
+    </script>
 </head>
 <body>
 
