Calendar implemented, except notificaitons.

--- a/app/src/main/assets/calendar.html
+++ b/app/src/main/assets/calendar.html
@@ -19,7 +19,9 @@
 
     <main>
 
-        <h1>Calendar</h1>
+        <div class="schedule-meal" onclick="scheduleMealPlan();">
+            <h3>Schedule Meal Plan</h3>
+        </div>
 
     </main>
 
