Minor Fixes, and made IMGs loaded locally.

--- a/app/src/main/assets/calculator.html
+++ b/app/src/main/assets/calculator.html
@@ -43,7 +43,7 @@
 
             <h1 id="bmi-val">Body Mass Index</h1>
 
-            <img src="https://www.medindia.net/patients/calculators/images/body-mass-index-bmi-chart.jpg" alt="Body Mass Index Meaning Chart">
+            <img src="/assets/BMI.jpg" alt="Body Mass Index Meaning Chart">
 
         </section>
 
@@ -51,19 +51,23 @@
 
             <h1 id="blp-val"></h1>
 
+            <img src="/assets/BLP.jpg" alt="Body Lean Percentage Meaning Chart" style="outline: 1px solid black;">
+
         </section>
 
         <section class="bfp">
 
             <h1 id="bfp-val"></h1>
 
-            <img src="https://www.dancehealthfitness.com/uploads/2/4/9/0/24902440/5472960_orig.gif" alt="Body Fat Percentage Meaning Chart">
+            <img src="/assets/BFP.gif" alt="Body Fat Percentage Meaning Chart">
 
         </section>
 
         <section class="mp">
 
             <h1 id="mp-val"></h1>
+
+            <img src="/assets/BMP.jpg" alt="Body Muscle Percentage Meaning Chart"  style="outline: 1px solid black;">
 
         </section>
 
